--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
   "name": "server-tutorial",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "netlify functions:serve"
+    "serve": "netlify functions:serve",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "devDependencies": {
-    "netlify-cli": "^17.37.2"
-  }
+    "netlify-cli": "^17.37.2",
+    "@vitejs/plugin-react": "^4.3.2",
+    "vite": "^5.4.8"
+  },
+  "description": ""
 }
